[gd_scene load_steps=2 format=3 uid="uid://o1qxu1x2lv1i"]

[ext_resource type="Script" uid="uid://f2d4yqgcefuh" path="res://Project/UI/replicator_ui.gd" id="1_l5p4j"]

[node name="Replicator_UI" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5p4j")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 100.0
offset_right = 113.0
offset_bottom = 271.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2
alignment = 1

[node name="rum_btn" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Rum"

[node name="whiskey_btn" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Whisky"

[node name="wodka_btn" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Wodka"

[node name="beer_btn" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Beer"

[node name="glass_btn" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Glass"

[node name="back_btn" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/rum_btn" to="." method="_on_rum_btn_pressed"]
[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/whiskey_btn" to="." method="_on_whiskey_btn_pressed"]
[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/wodka_btn" to="." method="_on_wodka_btn_pressed"]
[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/beer_btn" to="." method="_on_beer_btn_pressed"]
[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/glass_btn" to="." method="_on_glass_btn_pressed"]
[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/back_btn" to="." method="_on_back_btn_pressed"]
